hw12_13_14_15_16_calendar/charts/templates/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: calendar-service
spec:
  type: NodePort
  selector:
    app: calendar
  ports:
    - protocol: TCP
      port: 8888
      targetPort: 8888

---
apiVersion: v1
kind: Service
metadata:
  name: scheduler-service
spec:
  selector:
    app: scheduler
  ports:
    - protocol: TCP
      port: 8889
      targetPort: 8889

---
apiVersion: v1
kind: Service
metadata:
  name: sender-service
spec:
  selector:
    app: sender
  ports:
    - protocol: TCP
      port: 8890
      targetPort: 8890
